# gnome-xiangqi

./: .gitignore  COPYING  README.md  meson.build  功能清单.md
data/: meson.build  org.gnome.Xiangqi.gschema.xml  xiangqi-window.ui  xiangqi.gresource.xml
data/pieces/: meson.build
lib/: meson.build  xiangqi-clock.vala  xiangqi-game.vala  xiangqi-move.vala  xiangqi-piece.vala  xiangqi-player.vala  xiangqi-state.vala
src/: gnome-xiangqi.vala  meson.build  new-game-dialog.vala  preferences-dialog.vala  xiangqi-scene.vala  xiangqi-view.vala  xiangqi-window.vala
