piece_files = [
  'red_general.svg',
  'red_advisor.svg',
  'red_elephant.svg',
  'red_horse.svg',
  'red_chariot.svg',
  'red_cannon.svg',
  'red_soldier.svg',
  'black_general.svg',
  'black_advisor.svg',
  'black_elephant.svg',
  'black_horse.svg',
  'black_chariot.svg',
  'black_cannon.svg',
  'black_soldier.svg',
]

install_data(piece_files,
  install_dir: join_paths(get_option('datadir'), meson.project_name(), 'pieces')
)